appId: ${APP_ID}
name: Delete Server
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-7

---
- evalScript: ${output.user = output.utils.createUser()}
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}

# should be logged in main server
- runFlow:
    file: './utils/check-server.yaml'
    env:
      server: ${output.data.server}

# should add server
- runFlow: '../../helpers/open-servers-list.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-header-server-add'
    timeout: 60000
- tapOn:
    id: 'rooms-list-header-server-add'
- extendedWaitUntil:
    visible:
      id: 'new-server-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'new-server-view-input'
    timeout: 60000
- tapOn:
    id: 'new-server-view-input'
- inputText: ${output.data.alternateServer}
- pressKey: 'enter'
- extendedWaitUntil:
    visible:
      id: 'workspace-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'workspace-view-register'
    timeout: 60000
- tapOn:
    id: 'workspace-view-register'
- extendedWaitUntil:
    visible:
      id: 'register-view-name'
    timeout: 60000
- runFlow: '../../helpers/create-account.yaml'
- runFlow:
    file: './utils/check-server.yaml'
    env:
      server: ${output.data.alternateServer}

# should delete server
- runFlow: '../../helpers/open-servers-list.yaml'
- extendedWaitUntil:
    visible:
      id: 'server-item-${output.data.server}'
    timeout: 60000

# swipe left to reveal delete button
- swipe:
    direction: LEFT
    from:
      id: 'server-item-${output.data.server}'

# tap delete button
- tapOn:
    id: 'server-item-${output.data.server}-delete'

# confirm deletion
- extendedWaitUntil:
    visible:
      text: '.*Delete.*'
    timeout: 60000
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          point: 65%,55%
          retryTapIfNoChange: true
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn:
          text: 'Delete'
          retryTapIfNoChange: true
- waitForAnimationToEnd:
    timeout: 300
- runFlow: '../../helpers/open-servers-list.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-header-servers-list'
    timeout: 60000
- extendedWaitUntil:
    notVisible:
      id: 'server-item-${output.data.server}'
    timeout: 60000
