appId: chat.rocket.reactnative
name: E2E Encryption
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-9

---
- evalScript: ${output.room = 'encrypted' + output.random()}
- evalScript: ${output.userA = output.utils.createUser()}
- evalScript: ${output.userB = output.utils.createUser()}

# login as User B and change E2E password
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.userB.username}
      PASSWORD: ${output.userB.password}
- runFlow: './utils/navigate-to-e2ee-security.yaml'
- runFlow: './utils/change-e2ee-key.yaml'

# login as User A and change E2E password
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.userA.username}
      PASSWORD: ${output.userA.password}
      CLEAR_STATE: true
- runFlow: './utils/navigate-to-e2ee-security.yaml'
- runFlow: './utils/change-e2ee-key.yaml'

# Create room as UserA and send a message
# should create encrypted room
- launchApp
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view-create-channel'
    timeout: 60000
- tapOn:
    id: 'rooms-list-view-create-channel'
- extendedWaitUntil:
    visible:
      id: 'new-message-view'
- extendedWaitUntil:
    visible:
      id: 'new-message-view-create-channel'
    timeout: 60000
- tapOn:
    id: 'new-message-view-create-channel'
- extendedWaitUntil:
    visible:
      id: 'select-users-view'
    timeout: 60000
- tapOn:
    id: 'select-users-view-search'
- inputText: ${output.userB.username}
- extendedWaitUntil:
    visible:
      id: 'select-users-view-item-${output.userB.username}'
    timeout: 60000
- tapOn:
    id: 'select-users-view-item-${output.userB.username}'
- extendedWaitUntil:
    visible:
      id: 'selected-user-${output.userB.username}'
- tapOn:
    id: 'selected-users-view-submit'
- extendedWaitUntil:
    visible:
      id: 'create-channel-name'
    timeout: 60000
- tapOn:
    id: 'create-channel-name'
- inputText: ${output.room}
- hideKeyboard
- extendedWaitUntil:
    visible:
      id: 'create-channel-encrypted'
    timeout: 60000
- tapOn:
    id: 'create-channel-encrypted'
- tapOn:
    id: 'create-channel-submit'
- extendedWaitUntil:
    visible:
      id: 'room-view-title-${output.room}'
    timeout: 60000

# should send message and be able to read it
- extendedWaitUntil:
    visible:
      id: 'message-composer-input'
    timeout: 60000
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: 'm0'

# should quote a message and be able to read both
- evalScript: ${output.mockedMessageTextToQuote = 'm1'}
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: ${output.mockedMessageTextToQuote}
- evalScript: ${output.quotedMessage = 'm2'}
- longPressOn:
    text: .*${output.mockedMessageTextToQuote}.*
- extendedWaitUntil:
    visible:
      id: action-sheet
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: action-sheet-handle
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: Quote
    timeout: 60000
- tapOn:
    text: Quote
- extendedWaitUntil:
    visible:
      id: message-composer-input
    timeout: 60000
- tapOn:
    id: message-composer-input
- inputText: ${output.quotedMessage}
- extendedWaitUntil:
    visible:
      id: message-composer-send
    timeout: 60000
- tapOn:
    id: message-composer-send
- extendedWaitUntil:
    visible:
      text: .*${output.quotedMessage}.*
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'reply-${output.userA.username}-${output.mockedMessageTextToQuote}'
    timeout: 60000

# If session is not encrypted, it shouldnt trigger read messages
# should login as UserB, dont set e2ee password and dont read messages
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.userB.username}
      PASSWORD: ${output.userB.password}
      CLEAR_STATE: true
- runFlow:
    file: '../../helpers/navigate-to-room.yaml'
    env:
      ROOM: ${output.room}
- extendedWaitUntil:
    visible:
      id: 'room-view-encrypted-room'
    timeout: 60000

# should login as UserA and check message is not read
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.userA.username}
      PASSWORD: ${output.userA.password}
      CLEAR_STATE: true
- runFlow:
    file: '../../helpers/navigate-to-room.yaml'
    env:
      ROOM: ${output.room}
- runFlow: './utils/enter-e2e-key.yaml'
- extendedWaitUntil:
    visible:
      id: 'read-receipt-unread'
    timeout: 60000

# should login as UserB, set e2ee password and read messages
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.userB.username}
      PASSWORD: ${output.userB.password}
      CLEAR_STATE: true
- runFlow:
    file: '../../helpers/navigate-to-room.yaml'
    env:
      ROOM: ${output.room}
- runFlow: './utils/enter-e2e-key.yaml'
- extendedWaitUntil:
    visible:
      text: '.*m0.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m1.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m2.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'message-composer-input'
    timeout: 60000
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: 'm3'

# should login as UserA and check message is read
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.userA.username}
      PASSWORD: ${output.userA.password}
      CLEAR_STATE: true
- runFlow:
    file: '../../helpers/navigate-to-room.yaml'
    env:
      ROOM: ${output.room}
- runFlow: './utils/enter-e2e-key.yaml'
- extendedWaitUntil:
    visible:
      text: '.*m0.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m1.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m2.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m3.*'
    timeout: 60000

# Login as UserA, reset user e2ee key, reset room E2EE key and send a message
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.userA.username}
      PASSWORD: ${output.userA.password}
      CLEAR_STATE: true

# should reset user E2EE key, login again and recreate keys
- runFlow: './utils/navigate-to-e2ee-security.yaml'
- runFlow: './utils/reset-e2ee-key.yaml'
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.userA.username}
      PASSWORD: ${output.userA.password}
      CLEAR_STATE: true
- runFlow: './utils/navigate-to-e2ee-security.yaml'
- runFlow: './utils/change-e2ee-key.yaml'

# should reset room E2EE key
- launchApp
- runFlow:
    file: '../../helpers/navigate-to-room.yaml'
    env:
      ROOM: ${output.room}
- extendedWaitUntil:
    visible:
      text: '.*Check back in a few moments.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*The encryption keys for the room need to be updated, another room member needs to be online for this to happen.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'room-view-header-encryption'
    timeout: 60000
- tapOn:
    id: 'room-view-header-encryption'
- extendedWaitUntil:
    visible:
      id: 'e2ee-toggle-room-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'e2ee-toggle-room-reset-key'
    timeout: 60000
- tapOn:
    id: 'e2ee-toggle-room-reset-key'
- extendedWaitUntil:
    visible:
      text: '.*Reset encryption key.*'
    timeout: 60000
- tapOn:
    text: 'Reset'
    index: 0
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    file: '../../helpers/navigate-to-room.yaml'
    env:
      ROOM: ${output.room}
- extendedWaitUntil:
    visible:
      id: 'room-view-title-${output.room}'
    timeout: 60000
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: 'm4'

# Login as UserB, accept new room key, send a message and read everything
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.userB.username}
      PASSWORD: ${output.userB.password}
      CLEAR_STATE: true

# should send message and be able to read it
- runFlow:
    file: '../../helpers/navigate-to-room.yaml'
    env:
      ROOM: ${output.room}
- runFlow: './utils/enter-e2e-key.yaml'
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: 'm5'
- extendedWaitUntil:
    visible:
      text: '.*m0.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m1.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m2.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m3.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m4.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m5.*'
    timeout: 60000

# should send a message, edit it and be able to read it
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: 'm99'
- extendedWaitUntil:
    visible:
      text: '.*m99.*'
    timeout: 60000
- longPressOn:
    text: '.*m99.*'
- extendedWaitUntil:
    visible:
      id: 'action-sheet'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: 'Edit'
    timeout: 60000
- tapOn:
    text: 'Edit'
- eraseText
- inputText: 'm6'
- tapOn:
    id: 'message-composer-send'
- extendedWaitUntil:
    visible:
      text: '.*m0.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m1.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m2.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m3.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m4.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m5.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*m6.*'
    timeout: 60000

# Should reset E2EE key from E2EEnterYourPasswordView
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.userA.username}
      PASSWORD: ${output.userA.password}
      CLEAR_STATE: true
- runFlow: './utils/navigate-to-e2ee-security.yaml'
- runFlow: './utils/reset-e2ee-key.yaml'
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.userA.username}
